refactor : 자동차 이름이 빈값인 경우 예외 처리
자동차 이름이 빈값인 경우 예외 처리